--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
       <h1>Welcome to FitLife Gym</h1>
       <p>Your journey to fitness starts here!</p>
-      <p><strong>Telebirr Account:</strong> 10005678990</p>
+      <p><strong>CBE ACCOUNT:</strong> 10005678990</p>
       <p><strong>Amount:</strong> 1200 ETB (Monthly Membership)</p>
       <a href="#registrationForm" class="cta-button">Register Now</a>
     </div>
